# MailKeep

./: .dockerignore  .envrc  .gitignore  .justfile  .renovaterc.json5  CHANGELOG.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  config.sops.env  tailwind.config.js
.cargo/: config.toml
.claude/: CLAUDE.md  Database.md  Dioxus.md  issueboss.json  settings.json
.config/: cliff.toml  mise.toml  prettierignore
.github/workflows/: pages.yaml  release.yaml  remove-tag.yaml  renovate.yaml
Data/: mailkeep.db  mailkeep.db-shm
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  repository.rs  test_support.rs
crates/core/src/account/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/auth/: mod.rs  repository.rs  service.rs
crates/core/src/crypto/: cipher.rs  master_key.rs  mod.rs  service.rs
crates/core/src/event/: mod.rs  model.rs  service.rs
crates/core/src/folder/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/imap/: mod.rs  model.rs  port.rs  service.rs
crates/core/src/ingest/: mod.rs  model.rs  service.rs
crates/core/src/jobs/: handler.rs  mod.rs  model.rs  repository.rs  service.rs  worker.rs
crates/core/src/message/: mod.rs  repository.rs  service.rs
crates/core/src/message/model/: attachment.rs  flags.rs  location.rs  message.rs  mod.rs  parsed.rs
crates/core/src/message/snapshots/: mk_core__message__service__tests__snapshot_recorded_message_shape.snap
crates/core/src/search/: mod.rs  model.rs  query.rs  service.rs
crates/core/src/stats/: mod.rs  model.rs  repository.rs  service.rs
crates/core/src/storage/: mod.rs  service.rs  traits.rs
crates/core/src/types/: capability.rs  content_hash.rs  email.rs  mod.rs
crates/core/src/user/: mod.rs
crates/core/src/user/model/: user.rs  user_settings.rs
crates/core/src/user/service/: user.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  nop_job_repository.rs  repository.rs  transaction.rs
crates/database/src/adapters/: account.rs  folder.rs  jobs.rs  message.rs  message_attachment.rs  message_location.rs  mod.rs  session.rs  stats.rs  user.rs  user_settings.rs
crates/database/src/entities/: accounts.rs  folders.rs  jobs.rs  message_attachments.rs  message_locations.rs  messages.rs  mod.rs  prelude.rs  user_settings.rs  users.rs
crates/database/src/migrations/: m20260228_000003_create_user_settings_table.rs  m20260520_000001_create_users_table.rs  m20260520_000002_create_sessions_table.rs  m20260524_000004_create_jobs_table.rs  m20260525_000005_create_accounts_table.rs  m20260606_000006_create_folders_table.rs  m20260606_000007_create_messages_table.rs  m20260606_000008_create_message_locations_table.rs  m20260606_000009_create_message_attachments_table.rs  m20260621_000010_message_identity_by_content_hash.rs  m20260704_000011_add_messages_indexed_column.rs  mod.rs
crates/frontend/: Cargo.toml
crates/frontend/assets/: input.css
crates/frontend/src/: error.rs  lib.rs  password.rs
crates/frontend/src/components/: app_layout.rs  events.rs  login_form.rs  message_row.rs  mod.rs  nav_bar.rs  register_admin_form.rs  search.rs  selection.rs  theme.rs
crates/frontend/src/routes/: mod.rs  server_helpers.rs
crates/frontend/src/routes/account_add_page/: connection_form.rs  dtos.rs  folder_picker.rs  folder_tree.rs  mod.rs
crates/frontend/src/routes/home_page/: account_actions.rs  delete_account_modal.rs  edit_folders_modal.rs  format.rs  message_list.rs  message_viewer.rs  mod.rs  search_results.rs  stats_panel.rs
crates/frontend/src/routes/landing_page/: mod.rs
crates/frontend/src/routes/profile_page/: mod.rs
crates/frontend/src/routes/settings_page/: mod.rs  users_section.rs
crates/frontend/src/server/: auth_user.rs  events.rs  mod.rs  oidc.rs  session_pool.rs
crates/imap/: Cargo.toml
crates/imap/src/: adapter.rs  connect.rs  lib.rs  probe.rs  subsystem.rs  sync.rs
crates/imap/tests/: greenmail.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/fixtures/: dedup_a.eml  dedup_b.eml  no_from.eml  simple_attachment.eml
crates/integration-tests/src/: account_add.rs  account_lifecycle.rs  context.rs  folder_message.rs  greenmail.rs  greenmail_support.rs  imap_sync.rs  ingest.rs  jobs.rs  main.rs  search.rs  sqlite.rs
crates/mailkeep/: Cargo.toml
crates/mailkeep/src/: commands.rs  config.rs  imap_inspect.rs  lib.rs  logging.rs
crates/parser/: Cargo.toml
crates/parser/fixtures/: alternative.eml  render_html_cid.eml  render_html_remote.eml  render_script.eml  render_text_only.eml
crates/parser/src/: handler.rs  lib.rs  parse.rs  render.rs
crates/parser/src/snapshots/: mk_parser__parse__tests__snapshot_parsed_shape.snap
crates/parser/tests/fixtures/: html_only.eml  mixed_attachment.eml  no_from.eml  no_message_id.eml  plain.eml
crates/search/: Cargo.toml
crates/search/src/: index.rs  indexer.rs  lib.rs  schema.rs  service.rs
crates/storage/: Cargo.toml
crates/storage/src/: atomic.rs  attachment.rs  error.rs  lib.rs  path.rs  raw.rs
crates/storage/tests/: integration.rs
crates/user/: model.rs  repository.rs  service.rs
crates/user/model/: user_setting.rs
crates/user/repository/: user.rs  user_settings.rs
crates/user/service/: user_settings.rs
crates/utils/: Cargo.toml
crates/utils/src/: token.rs
scripts/: release.sh
