[package]
name = "mk-core"
description = "MailKeep core services"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
test-support = ["dep:mockall"]

[dependencies]
mockall = { workspace = true, optional = true }
mk-utils.workspace = true

argon2.workspace = true
async-trait.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
derive_builder.workspace = true
hkdf.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
