[package]
name = "mk-database"
description = "MailKeep database services"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
mk-core = { workspace = true, features = ["test-support"] }
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
