[package]
name = "bb-frontend"
description = "BookBoss frontend"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
bb-core = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
base64 = { workspace = true }
rand = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-graceful-shutdown = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["io"] }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
chrono = { workspace = true }
clap.workspace = true
dioxus.workspace = true
dioxus-server = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
md-5 = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }

[dev-dependencies]

[features]
web = ["dioxus/web"]
server = [
    "dep:anyhow",
    "dep:async-stream",
    "dep:reqwest",
    "dep:dioxus-server",
    "dep:rand",
    "dep:rust_decimal",
    "dep:tokio",
    "dep:async-trait",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:bb-core",
    "dep:thiserror",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tokio-graceful-shutdown",
    "dep:quick-xml",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:md-5",
    "dep:openidconnect",
    "dioxus/server",
]

[lints]
workspace = true
