[package]
name = "mk-frontend"
description = "MailKeep frontend"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core = { workspace = true, optional = true }
mk-parser = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-graceful-shutdown = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
chrono = { workspace = true }
clap.workspace = true
dioxus.workspace = true
dioxus-server = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }

[dev-dependencies]

[features]
web = ["dioxus/web"]
server = [
    "dep:anyhow",
    "dep:futures",
    "dep:dioxus-server",
    "dep:rand",
    "dep:tokio",
    "dep:async-trait",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:mk-core",
    "dep:mk-parser",
    "dep:thiserror",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tokio-graceful-shutdown",
    "dep:openidconnect",
    "dep:secrecy",
    "dioxus/server",
]

[lints]
workspace = true
