[package]
name = "mk-imap"
description = "MailKeep IMAP adapter (async-imap + tokio-rustls)"

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# Exposes `ImapAdapter::with_tls_config`, a test-only constructor that injects a
# custom rustls config (used by the greenmail integration tests in the
# integration-tests crate). Not for production wiring.
test-support = []

[dependencies]
mk-core.workspace = true

async-imap.workspace = true
async-trait.workspace = true
futures.workspace = true
rustls.workspace = true
secrecy.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
webpki-roots.workspace = true

[lints]
workspace = true
