[package]
name = "integration-tests"
description = "MailKeep integration tests"
publish = false
autotests = false
autobins = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[test]]
name = "integration"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = []
# Adapter-vs-live-server tests for mk-imap. Spins up a greenmail container via
# testcontainers (needs a running docker/colima daemon); not part of the default
# run. See src/greenmail.rs / `just imap-integration-tests`.
greenmail = ["dep:mk-imap", "dep:rustls", "dep:testcontainers", "dep:async-imap", "dep:tokio-rustls", "dep:futures"]

[dependencies]
mk-core = { workspace = true, features = ["test-support"] }
mk-database.workspace = true
mk-imap = { workspace = true, optional = true, features = ["test-support"] }
mk-parser.workspace = true
mk-storage.workspace = true

async-imap = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
futures = { workspace = true, optional = true }
chrono.workspace = true
rustls = { workspace = true, optional = true }
sea-orm.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
testcontainers = { workspace = true, optional = true }
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-rustls = { workspace = true, optional = true }

[lints]
workspace = true
