[package]
name = "mk-parser"
description = "MailKeep message parser adapter (mail-parser)"

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core.workspace = true

chrono.workspace = true
mail-parser.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
insta.workspace = true
tokio = { workspace = true }
mk-core = { workspace = true, features = ["test-support"] }
chrono.workspace = true

[lints]
workspace = true
