[package]
name = "mk-search"
description = "MailKeep full-text search adapter (Tantivy)"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core.workspace = true

chrono.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
