[package]
name = "mk-search"
description = "MailKeep full-text search adapter (Tantivy)"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
mail-parser.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true

[dev-dependencies]
mk-database.workspace = true

sea-orm.workspace = true
tempfile.workspace = true

[lints]
workspace = true
