[package]
name = "mk-storage"
description = "MailKeep storage adapter (filesystem)"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mk-core.workspace = true

async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }

[lints]
workspace = true
