[package]
name = "mk-utils"
description = "MailKeep utility library"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
# sha2 = { workspace = true }
thiserror = { workspace = true }
# tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# tempfile = { workspace = true }

[lints]
workspace = true
